force-app/main/default/objects/Comm_Recipient__c/Comm_Recipient__c.object-meta.xml
<CustomObject>
    <label>Comm Recipient</label>
    <nameField>
        <label>Comm Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comm Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>