force-app/main/default/objects/Comm_Recipient__c/fields/Comm_Log__c.field-meta.xml
<CustomField>
    <fullName>Comm_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comm Log</label>
    <referenceTo>Comm_Log__c</referenceTo>
    <relationshipLabel>Comm Recipients</relationshipLabel>
    <relationshipName>Comm_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>