force-app/main/default/objects/Comm_Recipient__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comm Recipients</relationshipLabel>
    <relationshipName>Comm_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>