force-app/main/default/objects/Comm_Recipient__c/fields/Email_Send_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Send_Type__c</fullName>
    <label>Email Send Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TO</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>BCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>