force-app/main/default/objects/Comm_Recipient__c/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <label>Message Id</label>
    <length>765</length>
    <type>Text</type>
</CustomField>