force-app/main/default/objects/Comm_Recipient__c/fields/Postmark_Id__c.field-meta.xml
<CustomField>
    <fullName>Postmark_Id__c</fullName>
    <label>Postmark Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>