force-app/main/default/objects/Comm_Recipient__c/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traveller</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>To</fullName>
            </value>
            <value>
                <fullName>Cc</fullName>
            </value>
            <value>
                <fullName>Bcc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>