force-app/main/default/objects/Comm_Recipient__c/fields/WA_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>WA_Message_Id__c</fullName>
    <label>WA Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>